# sl-5-5-osi-trace-file-player

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  cpp-linter.yml  spdx.yml
src/: CMakeLists.txt  OSMPTraceFilePlayer.cpp  OSMPTraceFilePlayer.h  OSMPTraceFilePlayerConfig.in.h  modelDescription.in.xml
